refactor: 리프레시 & 포스트 조회 응답 포맷 변경